harbor/templates/core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: goharbor/harbor-core:v2.8.0
          ports:
            - containerPort: 80
