harbor/templates/portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
        - name: portal
          image: goharbor/harbor-portal:v2.8.0
          ports:
            - containerPort: 80
