harbor/templates/trivy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbor-trivy
  labels:
    app: harbor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor-trivy
  template:
    metadata:
      labels:
        app: harbor-trivy
    spec:
      containers:
        - name: trivy
          image: aquasec/trivy:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: trivy-data
              mountPath: /var/lib/trivy
      volumes:
        - name: trivy-data
          persistentVolumeClaim:
            claimName: harbor-pvc
